# learnsdl2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/lesson_01/: CMakeLists.txt  main.c  makefile
src/lesson_02/: CMakeLists.txt  main.c
src/lesson_03/: CMakeLists.txt  main.c
src/lesson_04/: CMakeLists.txt  main.c
src/lesson_05/: CMakeLists.txt  main.c
src/lesson_06/: CMakeLists.txt  main.c
src/lesson_07/: CMakeLists.txt  main.c
src/lesson_08/: CMakeLists.txt  main.c
src/lesson_09/: CMakeLists.txt  main.c
src/lesson_10/: CMakeLists.txt  main.c
src/lesson_11/: CMakeLists.txt  main.c  makefile
src/lesson_12/: CMakeLists.txt  main.c
src/lesson_13/: CMakeLists.txt  main.c
src/lesson_14/: CMakeLists.txt  main.c
src/lesson_15/: main.c
src/lesson_16/: main.c  makefile
src/lesson_17/: CMakeLists.txt  button.c  button.h  main.c  texture.h
src/lesson_18/: CMakeLists.txt  main.c
src/lesson_19/: main.c  makefile  texture.c
src/testsdl2_helloworld/: CMakeLists.txt  main.c  makefile
